test/testdata/string/escape_invalid_sequence_error.lox
// syntaxerror
// error: invalid escape sequence
// lint error: invalid escape sequence
print "before\yafter";
